--- a/PizzaShopJan/Dominio/Dominio.csproj
+++ b/PizzaShopJan/Dominio/Dominio.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.7.0" />
     <PackageReference Include="Autofac.WebApi2" Version="4.1.0" />
     <PackageReference Include="EntityFramework" Version="6.2.0" />
     <PackageReference Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.1" />
