--- a/PizzaShopJan/Dominio/Dominio.csproj
+++ b/PizzaShopJan/Dominio/Dominio.csproj
@@ -63,6 +63,10 @@
     <Compile Include="Migrations\201804181238184_AddImage.Designer.cs">
       <DependentUpon>201804181238184_AddImage.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201804200809581_Add_MIME.cs" />
+    <Compile Include="Migrations\201804200809581_Add_MIME.Designer.cs">
+      <DependentUpon>201804200809581_Add_MIME.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -76,6 +80,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201804181238184_AddImage.resx">
       <DependentUpon>201804181238184_AddImage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804200809581_Add_MIME.resx">
+      <DependentUpon>201804200809581_Add_MIME.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
