--- a/PizzaShopJan/PizzaShopJan/PizzaShopJan.csproj
+++ b/PizzaShopJan/PizzaShopJan/PizzaShopJan.csproj
@@ -251,6 +251,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201804130856294_InitialCreate.cs" />
+    <Compile Include="Migrations\201804130856294_InitialCreate.Designer.cs">
+      <DependentUpon>201804130856294_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201804200803568_Add_MIME.cs" />
+    <Compile Include="Migrations\201804200803568_Add_MIME.Designer.cs">
+      <DependentUpon>201804200803568_Add_MIME.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -342,6 +351,14 @@
       <Project>{1edb1b3b-6d73-4b65-ba58-13cb9e1414ef}</Project>
       <Name>Dominio</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201804130856294_InitialCreate.resx">
+      <DependentUpon>201804130856294_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804200803568_Add_MIME.resx">
+      <DependentUpon>201804200803568_Add_MIME.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
